tests/baselines/reference/compoundAdditionAssignmentLHSCannotBeAssigned.errors.txt
==== tests/cases/compiler/compoundAdditionAssignmentLHSCannotBeAssigned.ts (5 errors) ====
    // string can add every type, and result string cannot be assigned to below types
    enum E { a, b, c }
    
    var x1: boolean;
    x1 += '';
    ~~
!!! compoundAdditionAssignmentLHSCannotBeAssigned.ts(5,1): error TS2011: Cannot convert 'string' to 'boolean'.
    
    var x2: number;
    x2 += '';
    ~~
!!! compoundAdditionAssignmentLHSCannotBeAssigned.ts(8,1): error TS2011: Cannot convert 'string' to 'number'.
    
    var x3: E;
    x3 += '';
    ~~
!!! compoundAdditionAssignmentLHSCannotBeAssigned.ts(11,1): error TS2011: Cannot convert 'string' to 'number'.
    
    var x4: {a: string};
    x4 += '';
    ~~
!!! compoundAdditionAssignmentLHSCannotBeAssigned.ts(14,1): error TS2012: Cannot convert 'string' to '{ a: string; }':
!!! 	Type 'String' is missing property 'a' from type '{ a: string; }'.
    
    var x5: void;
    x5 += '';
    ~~
!!! compoundAdditionAssignmentLHSCannotBeAssigned.ts(17,1): error TS2011: Cannot convert 'string' to 'void'.